<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediTrackr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_info">Tablet Info</string>
    <string name="med_name">Medication Name:</string>
    <string name="day_dose">Daily Dosage:</string>
    <string name="tab_total">Total Tablets:</string>
    <string name="tab_track">Tracking</string>
    <string name="track_status">Tracking Medication:</string>
    <string name="track_start">Start Tracking</string>
    <string name="pref_track_medication">Medication Details</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_name_summary">Input the name of your medication</string>
    <string name="number_of">Number of Dosages</string>
    <string name="number_of_summary">Input you number of daily dosages</string>
    <string name="first_dose">Hour of First Dose</string>
    <string name="first_dose_summary">Enter the hour of you first dose of the day</string>
    <string name="dose_interval">Interval between Dosages</string>
    <string name="dose_interval_summary">Enter the number of hours suggested between dosages</string>
    <string name="medication_amount">Amount of tablets</string>
    <string name="medication_amount_summary">Enter number of tablets you were prescribed</string>
    <string name="title_activity_dosages">Dosages</string>
    <string name="title_activity_medication_query">Medication Query</string>
    <string name="query_info">If you would like to find out more about your medication please use the scanner below:</string>
    <string name="scan_barcode">Medication Query</string>

</resources>
